--- a/pom.xml
+++ b/pom.xml
@@ -9,17 +9,37 @@
 	<name>Alarm service</name>
 	<url>http://rohdef.dk</url>
 
+	<repositories>
+		<repository>
+			<id>org.asteriskjava</id>
+			<name>Maven Repository for asterisk-java</name>
+			<url>https://secure.reucon.net/nexus/content/repositories/opensource-snapshots/</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.xmlrpc</groupId>
+			<artifactId>xmlrpc-server</artifactId>
+			<version>3.1.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.asteriskjava</groupId>
+			<artifactId>asterisk-java</artifactId>
+			<version>1.0.0.CI-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+			<version>1.6</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.xmlrpc</groupId>
-			<artifactId>xmlrpc-server</artifactId>
-			<version>3.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
@@ -32,8 +52,22 @@
 			<version>1.1</version>
 		</dependency>
 	</dependencies>
+	
+	
 
 	<build>
 		<finalName>AlarmService</finalName>
+		
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
